tests/ui/rfcs/rfc-2632-const-trait-impl/tilde_const_on_impl_bound.stderr
error[E0015]: cannot call non-const fn `<T as Foo>::foo` in constant functions
  --> $DIR/tilde_const_on_impl_bound.rs:14:16
   |
LL |         self.0.foo()
   |                ^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
